--- a/src/components/Background/background.css
+++ b/src/components/Background/background.css
@@ -2,7 +2,7 @@ body, html {
   margin: 0;
   padding: 0;
   min-height: 100%;
-  overflow: hidden;
+  overflow: auto;
   background: radial-gradient(ellipse at bottom, #182323 0%, #111414 100%);
 }
 
