--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,19 @@
 @import url('https://fonts.googleapis.com/css2?family=Fraunces:ital,opsz,wght@0,9..144,100..900;1,9..144,100..900&family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
 
 :root {
+  /* =========== COLORS =========== */
   --text: #eeefef;
   --background: #111414;
   --primary: #b0c1c1;
   --secondary: #45605f;
   --tertiary: #6da09f;
   --accent: #ffd930;
+
+  /* =========== TYPOGRAPHY =========== */
+  --h1-font: 50px;
+  --h2-font: 38px;
+  --h3-font: 24px;
+  --h4-font: 20px;
 }
 
 * {
@@ -23,4 +30,17 @@
 body {
   min-height: 100vh;
   background-color: var(--background);
+}
+
+::-webkit-scrollbar {
+  width: 8px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: var(--tertiary);
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: #0c0e0e;
 }
