--- a/src/components/Leaderboard/leaderboard.css
+++ b/src/components/Leaderboard/leaderboard.css
@@ -2,15 +2,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 20px;
   min-height: 100vh;
   position: relative;
-}
-
-.title {
-  font-size: 2.5rem;
-  margin: 0 0 40px 25px;
-  color: var(--tertiary);
 }
 
 ul {
@@ -18,7 +11,7 @@ ul {
   padding: 0;
   margin: 0;
   width: 100%;
-  max-width: 600px;
+  max-width: 800px;
 }
 
 li {
@@ -41,25 +34,48 @@ li {
 .name {
   flex: 1;
   text-align: center;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  margin: 0 10px;
 }
 
 .score {
-  flex: 0 0 auto;
+  flex: 0 0 50px;
   text-align: center;
 }
 
+.leaderboard-header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  padding: 10px;
+  background-color: rgba(2, 15, 15, 0.7);
+  position: relative;
+  margin-bottom: 30px;
+}
+
+.title {
+  font-size: 2.5rem;
+  color: var(--tertiary);
+  margin: 0;
+  text-align: center;
+  flex: 1;
+}
+
 .trivia-icon {
-  position: absolute;
-  top: 20px;
-  left: 20px;
   font-size: 24px;
   cursor: pointer;
   color: var(--tertiary);
+  position: absolute;
+  left: 20px; 
 }
 
 .trivia-icon:hover {
   color: var(--accent);
 }
+
 
 li:nth-child(1) .rank {
   background-image: url('../../images/gold-medal.png');
@@ -106,9 +122,18 @@ li:nth-child(n+4) .name, li:nth-child(n+4) .rank, li:nth-child(n+4) .score {
   color: var(--primary);
 }
 
+.highlight {
+  background-color: rgba(255, 215, 0, 0.2);
+  font-weight: bold;
+  border-radius: 5px;
+}
+
 @media (max-width: 600px) {
   .leaderboard-container {
-    padding: 20px;
+    padding: 0;
+  }
+  ul {
+    padding: 0 20px;
   }
 
   .title {
