--- a/src/components/Trivia/trivia.css
+++ b/src/components/Trivia/trivia.css
@@ -21,7 +21,7 @@
   display: flex;
   flex-direction: column;
   gap: 10px;
-  width: 100%; /* Make sure the answers take up full width */
+  width: 100%; 
   max-width: 600px;
 }
 
@@ -33,7 +33,7 @@
   border-radius: 5px;
   transition: background-color 0.3s, border-color 0.3s;
   background-color: var(--primary);
-  width: 100%; /* Ensure answers stretch to fill their container */
+  width: 100%; 
   box-sizing: border-box;
 }
 
@@ -52,7 +52,7 @@
 }
 
 .answer.selected {
-  background-color: var(--secondary); /* Gray background to indicate selection */
+  background-color: var(--secondary); 
 }
 
 .answer.selected.correct {
@@ -76,7 +76,7 @@
   font-size: 1rem;
   margin-top: 10px;
   cursor: pointer;
-  background-color: #4CAF50; /* Green */
+  background-color: #4CAF50; 
   color: black;
   border: none;
   border-radius: 5px;
@@ -136,31 +136,47 @@
   animation: shake 0.5s ease;
 }
 
-.logout-icon {
+.top-bar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  padding: 20px;
+  background-color: rgba(2, 15, 15, 0.7);
   position: absolute;
-  top: 20px;
-  right: 20px;
-  font-size: 24px;
-  cursor: pointer;
+  top: 0;
+  left: 0;
+  z-index: 2;
+}
+
+.user-info {
+  font-size: 1.5rem;
+  font-weight: bold;
   color: var(--tertiary);
+  text-align: center;
+  flex: 1;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis; 
+  margin: 0 20px;
+}
+
+.leaderboard-icon, 
+.logout-icon {
+  font-size: 24px;
+  color: var(--tertiary);
+  cursor: pointer;
+  flex-shrink: 0;
+}
+
+.leaderboard-icon:hover {
+  color: var(--accent);
 }
 
 .logout-icon:hover {
   color: #f44336;
 }
 
-.leaderboard-icon {
-  position: absolute;
-  top: 20px;
-  left: 20px;
-  font-size: 24px;
-  cursor: pointer;
-  color: var(--tertiary);
-}
-
-.leaderboard-icon:hover {
-  color: var(--accent);
-}
 
 @keyframes shake {
   0% { transform: translateX(0); }
@@ -173,9 +189,13 @@
 
 
 @media (max-width: 768px) {
-   img {
+  img {
     width: 100%;
-   } 
+  } 
+
+  .user-info {
+    font-size: 1.2rem;
+  }
 
   .question {
     font-size: 1.2rem;
